feat: created content

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
             </ul>
         </header>
+        <div class="content">
+            <div class="textBox">
+                <h2>It's not just Coffe<br>It's <span>Starbucks</span></h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Tempora a cumque eligendi repellat aliquam. In tempore necessitatibus exercitationem magnam nemo? 
+                    Tempore illum aliquid mollitia consequatur? Dignissimos veniam necessitatibus placeat nobis!
+                </p>
+                <a href="#">Learn More</a>
+            </div>
+        </div>
     </section>
 </body>
 </html>
