--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>
         <header>
             <a href="#" class="logo">
-                <img src="src/logo.png" alt="logo.png">
+                <img src="src/logo.png" alt="logo.png" class="logo">
             </a>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -30,6 +30,9 @@
                     Tempore illum aliquid mollitia consequatur? Dignissimos veniam necessitatibus placeat nobis!
                 </p>
                 <a href="#">Learn More</a>
+            </div>
+            <div class="imgBox">
+                <img src="src/img1.png" alt="image" class="starbucks">
             </div>
         </div>
     </section>
