feat: add thumbs

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                 <img src="src/img1.png" alt="image" class="starbucks">
             </div>
         </div>
+        <ul class="thumb">
+            <li><img src="src/thumb1.png" alt="copo"></li>
+            <li><img src="src/thumb2.png" alt="copo"></li>
+            <li><img src="src/thumb3.png" alt="copo"></li>
+
+        </ul>
     </section>
 </body>
 </html>
