feat: create social media section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             <li><img src="src/thumb1.png" alt="copo"></li>
             <li><img src="src/thumb2.png" alt="copo"></li>
             <li><img src="src/thumb3.png" alt="copo"></li>
+        </ul>
+        <ul class="sci">
+            <li><a href="#"><img src="src/facebook.png" alt="facebook"></a></li>
+            <li><a href="#"><img src="src/twitter.png" alt="twitter"></a></li>
+            <li><a href="#"><img src="src/instagram.png" alt="instagram"></a></li>
 
         </ul>
     </section>
