feat: created ciricle

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <section>
+        <div class="circle">
+            
+        </div>
         <header>
             <a href="#" class="logo">
                 <img src="src/logo.png" alt="logo.png" class="logo">
