feat: function img alter

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    
+    <script src="scripts/main.js" type="text/javascript" ></script>
     <title>Starbucks Landing Page</title>
 </head>
 <body>
     <section>
         <div class="circle">
-            
         </div>
         <header>
             <a href="#" class="logo">
@@ -39,9 +38,9 @@
             </div>
         </div>
         <ul class="thumb">
-            <li><img src="src/thumb1.png" alt="copo"></li>
-            <li><img src="src/thumb2.png" alt="copo"></li>
-            <li><img src="src/thumb3.png" alt="copo"></li>
+            <li><img src="src/thumb1.png" alt="copo" onclick="imgSlider('src/img1.png')"></li>
+            <li><img src="src/thumb2.png" alt="copo" onclick="imgSlider('src/img2.png')"></li>
+            <li><img src="src/thumb3.png" alt="copo" onclick="imgSlider('src/img3.png')"></li>
         </ul>
         <ul class="sci">
             <li><a href="#"><img src="src/facebook.png" alt="facebook"></a></li>
