--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             </div>
         </div>
         <ul class="thumb">
-            <li><img src="src/thumb1.png" alt="copo" onclick="imgSlider('src/img1.png')"></li>
-            <li><img src="src/thumb2.png" alt="copo" onclick="imgSlider('src/img2.png')"></li>
-            <li><img src="src/thumb3.png" alt="copo" onclick="imgSlider('src/img3.png')"></li>
+            <li><img src="src/thumb1.png" alt="copo" onclick="imgSlider('src/img1.png'); changeCircleColor('#017143')"></li>
+            <li><img src="src/thumb2.png" alt="copo" onclick="imgSlider('src/img2.png'); changeCircleColor('#eb7495')"></li>
+            <li><img src="src/thumb3.png" alt="copo" onclick="imgSlider('src/img3.png'); changeCircleColor('#d752b1')"></li>
         </ul>
         <ul class="sci">
             <li><a href="#"><img src="src/facebook.png" alt="facebook"></a></li>
