--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="#" class="logo">
                 <img src="src/logo.png" alt="logo.png" class="logo">
             </a>
+            <div class="toggle"></div>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
